fix overflow

--- a/stylesheets/sass/app.scss
+++ b/stylesheets/sass/app.scss
@@ -86,7 +86,7 @@ section {
 
 .ejs-output {
   white-space: pre;
-  overflow: scroll;
+  overflow: auto;
   text-align: left;
   display: block;
   font-size: 12px;
